--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -1,27 +1,30 @@
-.container {
+/* Style for containers */
+.dashboard-container{
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+
+.login-container, .register-container  {
   max-width: 600px;
   margin: 0 auto;
   padding: 20px;
   font-family: Arial, sans-serif;
 }
 
-.login-container, .register-container {
-  max-width: 600px;
-  margin: 0 auto;
-  padding: 20px;
-  font-family: Arial, sans-serif;
-}
-
+/* Header styling */
 h2, h1, h3 {
   text-align: center;
   color: #32cce7;
 }
 
+/* Style for unordered lists */
 ul {
   list-style-type: none;
   padding: 0;
 }
 
+/* List item styling */
 li {
   padding: 10px;
   border: 1px solid #32cce7;
@@ -31,27 +34,47 @@ li {
 }
 
 li:hover {
-  background-color: #2de4cb;
+  background-color: #c1ebec;
 }
 
-form {
+.form-group {
+  
   display: flex;
   flex-direction: column;
   gap: 20px;
+  margin: 0 auto;
+  width: 50%;
+}
+.login-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin: 0 auto;
 }
 
+/* Input fields and button styling */
 input[type="text"],
 input[type="email"],
 input[type="password"],
 input[type="date"],
+input[type="number"],
 select,
 textarea,
 button {
   width: 100%;
   padding: 10px;
-  border: 1px solid#32cce7;
+  border: 1px solid #32cce7;
   border-radius: 4px;
   box-sizing: border-box;
+}
+
+/* Button styling */
+
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+  gap: 20px;
 }
 
 button {
@@ -62,9 +85,23 @@ button {
 }
 
 button:hover {
-  background-color: #2de4cb;
+  background-color: #39e0ae;
 }
 
+/* Styling for the product  */
+.product-info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.product-info div {
+  width: 30%;
+}
+
+.product-info strong {
+  font-weight: bold;
+}
 
 
 
